Fixed address 2 alignment, part 2...

--- a/_src/sass/layouts/_contact-details.scss
+++ b/_src/sass/layouts/_contact-details.scss
@@ -52,6 +52,9 @@
      ***/
         position: relative;
         left: ($circle-diameter + (1px * 2));
+        /* Prevent bug in iOS Safari where the 2 address go side-by-side, even
+         * thought that overflows the screen width! */
+        clear: left;
     }
 
 }
@@ -59,8 +62,16 @@
 @include media-width("address-two-columns") {
 /*** Media query: Wide enough for properly spaced side-by-side-addresses.
  ***/
-    .contact-details-data address {
-        @include rem("margin-right", ($line * 2));
+    .contact-details-data {
+
+        address {
+            @include rem("margin-right", ($line * 2));
+        }
+
+        + .contact-details-data {
+            clear: none;
+        }
+
     }
 
 }
